--- a/demo_GPEI.ipynb
+++ b/demo_GPEI.ipynb
@@ -738,7 +738,21 @@
       "Iteration (38/100) with score: -3530.23850.\n",
       "Iteration (39/100) with score: -3484.96610.\n",
       "Iteration (40/100) with score: -3763.26549.\n",
-      "Iteration (41/100) with score: -3577.71914.\n"
+      "Iteration (41/100) with score: -3577.71914.\n",
+      "Iteration (42/100) with score: -3571.24309.\n",
+      "Iteration (43/100) with score: -3612.40927.\n",
+      "Iteration (44/100) with score: -4049.32315.\n",
+      "Iteration (45/100) with score: -3747.37241.\n",
+      "Iteration (46/100) with score: -3530.38807.\n",
+      "Iteration (47/100) with score: -3420.79634.\n",
+      "Iteration (48/100) with score: -4078.33766.\n",
+      "Iteration (49/100) with score: -3973.20675.\n",
+      "Iteration (50/100) with score: -3473.86630.\n",
+      "Iteration (51/100) with score: -3494.24316.\n",
+      "Iteration (52/100) with score: -3470.84298.\n",
+      "Iteration (53/100) with score: -3488.24295.\n",
+      "Iteration (54/100) with score: -3505.95216.\n",
+      "Iteration (55/100) with score: -3577.48932.\n"
      ]
     }
    ],
